# typecast-autotag

./: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .release-it.json  CHANGELOG.md  PUBLISHING.md  README.KR.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.eslint.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish-maven.yml  publish-npm.yml  publish-pypi.yml
c-binding/: Dockerfile.build  Dockerfile.build.linux-multiarch  Dockerfile.build.windows  Dockerfile.build.windows-multiarch  Dockerfile.test.windows  Makefile  README.KR.md  README.ONLYUSE.KR.md  README.ONLYUSE.md  README.md
c-binding/example/: Makefile  example.c
c-binding/include/: typecast_autotag.h
c-binding/scripts/: build-linux-multiarch.sh  build-linux.sh  build-macos.sh  build-windows-multiarch.sh  build-windows.sh  bundle.js  test-e2e.sh
c-binding/scripts/e2e/: colors.ts  docker-runner.ts  index.ts  test-program-macos.ts  test-program-windows.ts  test-program.ts  types.ts
c-binding/src/: bundle-entry.ts  typecast_autotag.c
demo-html/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
demo-html/src/: Icons.tsx  app.tsx  examples.ts  index.css  useScrollAnimation.ts
java-binding/: .gitignore  BUILD.md  README.KR.md  README.md  pom.xml
java-binding/examples/: BasicUsage.java
java-binding/scripts/: copy-libs.sh  run-test.sh
java-binding/verification-test/: README.md  SimpleVerificationTest.java  pom.xml
python-binding/: MANIFEST.in  README.KR.md  README.md  pyproject.toml
python-binding/examples/: basic_usage.py
python-binding/scripts/: build.sh  copy-libs.sh  run-test.sh
python-binding/tests/: test_autotag.py
python-binding/typecast_autotag/: __init__.py  binding.py
python-binding/typecast_autotag/lib/: .gitkeep
python-binding/typecast_autotag/lib/darwin/: libtypecast_autotag.dylib
scripts/: build.js  post-c-build.sh  sync-python-version.js  sync-version.js
src/: index.ts  input-guard.ts
src/chinese/: index.ts
src/english/: auto-tag.ts  index.ts  manual-tag.ts
src/english/tags/: account.ts  area.ts  data-capacity.ts  date.ts  datetime.ts  day.ts  digits.ts  distance.ts  duration.ts  flight.ts  floor.ts  fraction.ts  inch.ts  lecture.ts  mile.ts  minsec.ts  money.ts  month.ts  name.ts  number.ts  order.ts  phone.ts  piece.ts  point.ts  ratio.ts  room-number.ts  seat.ts  serial.ts  temperature.ts  time.ts  volume.ts  weight.ts  year.ts
src/english/utils/: number-to-english.ts
src/generic-language/: index.ts
src/japanese/: index.ts
src/korean/: auto-tag.ts  index.ts  manual-tag.ts
src/korean/tags/: account.ts  address.ts  area.ts  bakil.ts  car-number.ts  data-capacity.ts  date.ts  datetime.ts  day.ts  digits.ts  distance.ts  duration.ts  flight.ts  floor.ts  fraction.ts  inch.ts  jari.ts  jong.ts  lecture.ts  mile.ts  minsec.ts  money.ts  month.ts  name.ts  number.ts  order.ts  phone.ts  piece.ts  point.ts  ratio.ts  room-number.ts  seat.ts  serial.ts  temperature.ts  time.ts  volume.ts  weight.ts  year.ts
src/korean/utils/: number-to-korean.ts
src/taiwanese-mandarin/: index.ts
src/utils/: date-validation.ts
tests/: aicc-detailed-multilingual.test.ts  demo-examples.test.ts  generic-language.test.ts  index.test.ts  input-limit.test.ts  manual-tag.test.ts
tests/chinese/: chinese.test.ts
tests/english/: top-level-api.test.ts
tests/english/auto-tag-aicc/: 01-main-menu.test.ts  02-payment-inquiry.test.ts  03-delivery-tracking.test.ts  04-order-cancel-refund.test.ts  05-member-info.test.ts  06-points-coupon.test.ts  07-reservation.test.ts  08-agent-connect.test.ts  09-subscription.test.ts  10-event-promo.test.ts  11-tech-support.test.ts  12-insurance.test.ts  13-hospital.test.ts  14-airline.test.ts  15-hotel.test.ts  (+16 more)
tests/fixtures/: aicc-detailed-scenarios.json
tests/japanese/: japanese.test.ts
tests/taiwanese-mandarin/: taiwanese-mandarin.test.ts
(+128 files in other folders)
