[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typecast-autotag"
version = "1.8.1"
description = "TTS text preprocessing library - Converts phone numbers, dates, amounts, etc. to formats suitable for speech synthesis"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Neosapience", email = "help@typecast.ai"}
]
maintainers = [
    {name = "Neosapience", email = "help@typecast.ai"}
]
keywords = ["tts", "text-to-speech", "preprocessing", "korean", "autotag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/neosapience/typecast-autotag"
Repository = "https://github.com/neosapience/typecast-autotag"
Documentation = "https://github.com/neosapience/typecast-autotag#readme"

[tool.setuptools]
packages = ["typecast_autotag"]
include-package-data = true

[tool.setuptools.package-data]
typecast_autotag = [
    "lib/linux/*.so",
    "lib/darwin/*.dylib", 
    "lib/windows/*.dll",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
